--- a/ca/org0.com.tw/ca/fabric-ca-server-config.yaml
+++ b/ca/org0.com.tw/ca/fabric-ca-server-config.yaml
@@ -85,7 +85,7 @@ tls:
 #############################################################################
 ca:
   # Name of this CA
-  name: tls.org1.com.tw
+  name: ca.org0.com.tw
   # Key file (is only used to import a private key into BCCSP)
   keyfile:
   # Certificate file (default: ca-cert.pem)
@@ -128,8 +128,8 @@ registry:
 
   # Contains identity information which is used when LDAP is disabled
   identities:
-     - name: tlsadmin
-       pass: tlsadminpw
+     - name: caadmin
+       pass: 2e2ecf9fd5434f5dd47f0a887799ac46
        type: client
        affiliation: ""
        attrs:
@@ -308,7 +308,7 @@ signing:
 #  if the server creates a self-signed TLS certificate.
 ###########################################################################
 csr:
-   cn: tls.org1.com.tw
+   cn: ca.org0.com.tw
    keyrequest:
      algo: ecdsa
      size: 256
@@ -319,9 +319,8 @@ csr:
         O: Hyperledger
         OU: Fabric
    hosts:
-     - 40d15941a079
      - localhost
-     - tls.org1.com.tw
+     - ca.org0.com.tw
    ca:
       expiry: 131400h
       pathlength: 1
