--- a/ca/org1.com.tw/tls/fabric-ca-server-config.yaml
+++ b/ca/org1.com.tw/tls/fabric-ca-server-config.yaml
@@ -40,7 +40,7 @@
 version: v1.5.7
 
 # Server's listening port (default: 7054)
-port: 7052
+port: 2154
 
 # Cross-Origin Resource Sharing (CORS)
 cors:
@@ -129,7 +129,7 @@ registry:
   # Contains identity information which is used when LDAP is disabled
   identities:
      - name: tlsadmin
-       pass: tlsadminpw
+       pass: 5fe31ca3b113fe68ca6466ae48d50d7d
        type: client
        affiliation: ""
        attrs:
