--- a/ca/org2.com.tw/ca/fabric-ca-server-config.yaml
+++ b/ca/org2.com.tw/ca/fabric-ca-server-config.yaml
@@ -85,7 +85,7 @@ tls:
 #############################################################################
 ca:
   # Name of this CA
-  name: tls.org2.com.tw
+  name: ca.org2.com.tw
   # Key file (is only used to import a private key into BCCSP)
   keyfile:
   # Certificate file (default: ca-cert.pem)
@@ -128,8 +128,8 @@ registry:
 
   # Contains identity information which is used when LDAP is disabled
   identities:
-     - name: tlsadmin
-       pass: tlsadminpw
+     - name: caadmin
+       pass: 198b39f4f823b8c0d036b40c5ea171c4
        type: client
        affiliation: ""
        attrs:
@@ -308,7 +308,7 @@ signing:
 #  if the server creates a self-signed TLS certificate.
 ###########################################################################
 csr:
-   cn: tls.org2.com.tw
+   cn: ca.org2.com.tw
    keyrequest:
      algo: ecdsa
      size: 256
